--- a/src/main/java/com/mycompany/pos/Screens/Dialog/SanPhamTheoNCCDialog.form
+++ b/src/main/java/com/mycompany/pos/Screens/Dialog/SanPhamTheoNCCDialog.form
@@ -70,11 +70,11 @@
                               <Component id="jLabel1" min="-2" max="-2" attributes="0"/>
                           </Group>
                           <EmptySpace max="32767" attributes="0"/>
-                          <Component id="btnThemSanPham3" min="-2" pref="112" max="-2" attributes="0"/>
+                          <Component id="btnThemSanPham3" min="-2" pref="140" max="-2" attributes="0"/>
                           <EmptySpace type="separate" max="-2" attributes="0"/>
-                          <Component id="btnThemSanPham2" min="-2" pref="112" max="-2" attributes="0"/>
+                          <Component id="btnThemSanPham2" min="-2" pref="140" max="-2" attributes="0"/>
                           <EmptySpace type="separate" max="-2" attributes="0"/>
-                          <Component id="btnThemSanPham1" min="-2" pref="112" max="-2" attributes="0"/>
+                          <Component id="btnThemSanPham1" min="-2" pref="140" max="-2" attributes="0"/>
                       </Group>
                   </Group>
                   <EmptySpace min="-2" pref="20" max="-2" attributes="0"/>
@@ -118,6 +118,9 @@
           <SubComponents>
             <Component class="javax.swing.JTable" name="tableProduct">
               <Properties>
+                <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+                  <Font name="Open Sans" size="14" style="0"/>
+                </Property>
                 <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
                   <Table columnCount="6" rowCount="4">
                     <Column editable="false" title="STT" type="java.lang.Integer"/>
@@ -183,6 +186,9 @@
         </Component>
         <Component class="javax.swing.JButton" name="btnThemSanPham1">
           <Properties>
+            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+              <Font name="Open Sans" size="13" style="0"/>
+            </Property>
             <Property name="text" type="java.lang.String" value="Tr&#x1edf; l&#x1ea1;i"/>
             <Property name="maximumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
               <Dimension value="[70, 20]"/>
@@ -200,6 +206,9 @@
         </Component>
         <Component class="javax.swing.JButton" name="btnThemSanPham2">
           <Properties>
+            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+              <Font name="Open Sans" size="13" style="0"/>
+            </Property>
             <Property name="text" type="java.lang.String" value="Nh&#x1ead;p h&#xe0;ng"/>
             <Property name="maximumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
               <Dimension value="[70, 20]"/>
@@ -217,6 +226,9 @@
         </Component>
         <Component class="javax.swing.JButton" name="btnThemSanPham3">
           <Properties>
+            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+              <Font name="Open Sans" size="13" style="0"/>
+            </Property>
             <Property name="text" type="java.lang.String" value="X&#xe1;c nh&#x1ead;p"/>
             <Property name="maximumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
               <Dimension value="[70, 20]"/>
