--- a/src/main/java/com/mycompany/pos/Screens/Dialog/ThongTinCouponDialog.form
+++ b/src/main/java/com/mycompany/pos/Screens/Dialog/ThongTinCouponDialog.form
@@ -52,7 +52,7 @@
                       <Component id="jLabel7" alignment="0" min="-2" max="-2" attributes="0"/>
                       <Component id="jLabel1" alignment="0" min="-2" max="-2" attributes="0"/>
                       <Component id="jDateApplyDay" max="32767" attributes="0"/>
-                      <Component id="jSpinnerPercent" max="32767" attributes="0"/>
+                      <Component id="txtPercent" alignment="0" pref="300" max="32767" attributes="0"/>
                   </Group>
                   <Group type="103" groupAlignment="0" attributes="0">
                       <Group type="102" attributes="0">
@@ -119,7 +119,7 @@
                   <EmptySpace type="separate" max="-2" attributes="0"/>
                   <Component id="jLabel11" min="-2" max="-2" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
-                  <Component id="jSpinnerPercent" min="-2" pref="36" max="-2" attributes="0"/>
+                  <Component id="txtPercent" min="-2" pref="36" max="-2" attributes="0"/>
                   <EmptySpace pref="32" max="32767" attributes="0"/>
               </Group>
           </Group>
@@ -249,7 +249,12 @@
         </Component>
         <Component class="com.toedter.calendar.JDateChooser" name="jDateApplyDay">
         </Component>
-        <Component class="javax.swing.JSpinner" name="jSpinnerPercent">
+        <Component class="javax.swing.JTextField" name="txtPercent">
+          <Properties>
+            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+              <Font name="Open Sans" size="18" style="0"/>
+            </Property>
+          </Properties>
         </Component>
       </SubComponents>
     </Container>
