--- a/src/main/java/com/mycompany/pos/Screens/Dialog/LoginDialog.form
+++ b/src/main/java/com/mycompany/pos/Screens/Dialog/LoginDialog.form
@@ -89,7 +89,7 @@
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="Open Sans" size="18" style="0"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="T&#xea;n S&#x1ea3;n ph&#x1ea9;m"/>
+            <Property name="text" type="java.lang.String" value="Username"/>
           </Properties>
         </Component>
         <Component class="javax.swing.JLabel" name="jLabel8">
