--- a/src/main/java/com/mycompany/pos/Screens/MainUI.form
+++ b/src/main/java/com/mycompany/pos/Screens/MainUI.form
@@ -358,15 +358,21 @@
                     <Component class="javax.swing.JTable" name="tableProduct">
                       <Properties>
                         <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
-                          <Table columnCount="4" rowCount="4">
+                          <Table columnCount="5" rowCount="4">
                             <Column editable="true" title="STT" type="java.lang.Integer"/>
                             <Column editable="false" title="S&#x1ea3;n ph&#x1ea9;m" type="java.lang.String"/>
                             <Column editable="false" title="Gi&#xe1; ti&#x1ec1;n" type="java.lang.String"/>
                             <Column editable="false" title="VAT" type="java.lang.String"/>
+                            <Column editable="true" title="S&#x1ed1; l&#x1b0;&#x1ee3;ng" type="java.lang.String"/>
                           </Table>
                         </Property>
                         <Property name="columnModel" type="javax.swing.table.TableColumnModel" editor="org.netbeans.modules.form.editors2.TableColumnModelEditor">
                           <TableColumnModel selectionModel="0">
+                            <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
+                              <Title/>
+                              <Editor/>
+                              <Renderer/>
+                            </Column>
                             <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
                               <Title/>
                               <Editor/>
